--- a/.gitignore
+++ b/.gitignore
@@ -47,8 +47,22 @@ bin/bok_read_filters
 bin/bok_read_guider_filters
 bin/bok_read_instrument_filters
 bin/bok_read_nominal_plane
+bin/Galil_DMC_22x0_CLI
+bin/Galil_DMC_22x0_TCP_Read
+bin/Galil_DMC_22x0_TCP_Read.py
+bin/Galil_DMC_22x0_TCP_Write
+bin/Galil_DMC_22x0_UDP_Read
+bin/Galil_DMC_22x0_UDP_Read.py
+bin/Galil_DMC_22x0_UDP_Write
 src/bokGalilIndiDriver
 src/bok_read_filters
 src/bok_read_guider_filters
 src/bok_read_instrument_filters
 src/bok_read_nominal_plane
+src/Galil_DMC_22x0_CLI
+src/Galil_DMC_22x0_TCP_Read
+src/Galil_DMC_22x0_TCP_Write
+src/Galil_DMC_22x0_UDP_Read
+src/Galil_DMC_22x0_UDP_Write
+src/libbokGalil.a
+src/libbokGalil.so
