--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,8 @@ bin/bok_read_guider_filters
 bin/bok_read_instrument_filters
 bin/bok_read_nominal_plane
 bin/Galil_DMC_22x0_CLI
+bin/Galil_DMC_22x0_NgClient
+bin/Galil_DMC_22x0_NgServer
 bin/Galil_DMC_22x0_TCP_Read
 bin/Galil_DMC_22x0_TCP_Read.py
 bin/Galil_DMC_22x0_TCP_Write
@@ -62,6 +64,8 @@ src/bok_read_guider_filters
 src/bok_read_instrument_filters
 src/bok_read_nominal_plane
 src/Galil_DMC_22x0_CLI
+src/Galil_DMC_22x0_NgClient
+src/Galil_DMC_22x0_NgServer
 src/Galil_DMC_22x0_TCP_Read
 src/Galil_DMC_22x0_TCP_Write
 src/Galil_DMC_22x0_UDP_Read
