Update files for various machines and add Makefile targets

--- a/src/Makefile
+++ b/src/Makefile
@@ -40,11 +40,33 @@ SLIBS = -lm -lpthread
 help:
 	clear
 	@echo ""
-	@echo "The following targets are available:"
+	@echo "Main targets are available:"
 	@echo ""
 	@echo "   all clean everything help install"
 	@echo ""
-	@echo "To re-build the code, use: % make everything"
+	@echo "To re-build the code, use: % make <sys>"
+	@echo "   where <sys> = 'banzai | bart | bonsai | lab'"
+	@echo ""
+
+banzai:
+	rm -rf $(HERE)/__hosts__.h >> /dev/null 2>&1
+	ln -sf $(HERE)/__hosts__.banzai.h $(HERE)/__hosts__.h
+	make everything
+
+bart:
+	rm -rf $(HERE)/__hosts__.h >> /dev/null 2>&1
+	ln -sf $(HERE)/__hosts__.bart.h $(HERE)/__hosts__.h
+	make everything
+
+bonsai:
+	rm -rf $(HERE)/__hosts__.h >> /dev/null 2>&1
+	ln -sf $(HERE)/__hosts__.bonsai.h $(HERE)/__hosts__.h
+	make everything
+
+lab:
+	rm -rf $(HERE)/__hosts__.h >> /dev/null 2>&1
+	ln -sf $(HERE)/__hosts__.lab.h $(HERE)/__hosts__.h
+	make everything
 
 all:
 	for target in $(ATARGETS); do\
@@ -62,11 +84,6 @@ all:
 	for target in $(UTARGETS); do\
 	 gcc $(CFLAGS) -o $(HERE)/$$target $(HERE)/$$target.c $(LLIBS) $(GLIBS);\
 	done
-
-bok:
-	rm -rf $(HERE)/__hosts__.h >> /dev/null 2>&1
-	ln -sf $(HERE)/__hosts__.bok.h $(HERE)/__hosts__.h
-	make everything
 
 clean:
 	for target in $(ATARGETS); do\
@@ -127,11 +144,6 @@ install:
 	cp $(HERE)/Galil_DMC_22x0_TCP_Read.py $(BOK_BIN)/
 	cp $(HERE)/Galil_DMC_22x0_UDP_Read.py $(BOK_BIN)/
 	touch $(BOK_BIN)/*
-
-lab:
-	rm -rf $(HERE)/__hosts__.h >> /dev/null 2>&1
-	ln -sf $(HERE)/__hosts__.lab.h $(HERE)/__hosts__.h
-	make everything
 
 libbokGalil.a: bokGalil.c
 	rm -rf $(HERE)/$@ $(BOK_LIB)/$@ $(HERE)/bokGalil.o >> /dev/null 2>&1
